--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,42 @@
 .App {
+  height: 100vh; /* 화면 전체 높이 */
+  background-image: url('./assets/bg.jpg');
+  background-size: cover; /* 배경 이미지가 화면 크기에 맞게 커지도록 */
+  background-position: center; /* 배경 이미지가 중앙에 위치하도록 */
+  display: flex; /* Flexbox 레이아웃 사용 */
+  justify-content: center; /* 수평 중앙 정렬 */
+  align-items: center; /* 수직 중앙 정렬 */
+  flex-direction: column; /* 자식 요소들이 세로로 쌓이도록 */
   text-align: center;
+  color: white;
+}
+
+/* 메인 로고 */
+.eswn {
+  font-size: 6rem;
+  color:white;
+  text-align: center;
+  margin-top: -400px;
+}
+
+/* MetaMask로 로그인 */
+button.loginbutton {
+  background-color: #007bff; /* 파란색 */
+  color: white; /* 텍스트 색상 */
+  font-size: 1.2rem; /* 버튼 크기 */
+  padding: 10px 20px; /* 버튼 내부 여백 */
+  border: none; /* 테두리 제거 */
+  border-radius: 5px; /* 둥근 모서리 */
+  cursor: pointer; /* 커서 모양 */
+  transition: background-color 0.3s ease; /* 호버 효과를 위한 전환 */
+}
+
+button.loginbutton:hover {
+  background-color: #0056b3; /* 호버 시 색상 */
+}
+
+.normaltext {
+  color: white;
 }
 
 .App-logo {
